--- a/ChemVerify.API/ChemVerify.API.csproj
+++ b/ChemVerify.API/ChemVerify.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\ChemVerify.Infrastructure\ChemVerify.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="PolicyProfiles.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
